[project]
name = "LLMsandbox"
version = "0.1.0"
description = "A set of classes/utilities for LLM data exploration."
authors = [
    {name = "Andrew Beck", email = "andy@andrewbeck.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ""
build-backend = ""