[project]
name = "llmsandbox"
version = "0.1.0"
description = "A set of classes/utilities for LLM data exploration."
authors = [
    {name = "Andrew Beck", email = "andy@andrewbeck.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llmsandbox = "llmsandbox.__main__:main"